fix obevujicich se scrollbaru

--- a/www/styl/screen.styl
+++ b/www/styl/screen.styl
@@ -1,6 +1,13 @@
 @import prefixes
 @import colors
 @import basics
+.bydleni
+    position absolute
+    top 0px
+    left 0px
+    bottom 0px
+    width 100%
+    overflow hidden
 svg
     path.line
         fill none
